--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -161,6 +161,10 @@ section.search select{
     gap: 20px;
     padding: 0 0 30px 0;
 }
+.product img{
+    object-fit: contain;
+    width: 100%;
+}
 .product .product-body{
     text-align: center;
 }
