--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -125,10 +125,13 @@ section.search select{
     padding: 40px 50px;
     display: flex;
     gap: 30px;
+    margin: auto;
+    flex-wrap: wrap;
 }
 .content .filter{
     background-color: #fff;
-    min-width: 385px;
+    min-width: 300px;
+    max-width: 25%;
     height: 700px;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
@@ -137,17 +140,19 @@ section.search select{
     border-radius: 20px;
 }
 .content .products{
-    flex-grow: 1;
-    
+    width: 100%;
+    margin-top: -40px;
     height: auto;
 }
 .content .products .content{
+    width: 100%;
     height: 100%;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
 }
 .product{
-    width: 375px;
+    min-width: 375px;
     background-color: #fff;
     border-radius: 20px;
     -webkit-border-radius: 20px;
@@ -159,11 +164,12 @@ section.search select{
     justify-content: center;
     align-items: center;
     gap: 20px;
-    padding: 0 0 30px 0;
+    padding: 30px 10px;
 }
 .product img{
     object-fit: contain;
-    width: 100%;
+    width: 270px;
+    height: 270px;
 }
 .product .product-body{
     text-align: center;
@@ -185,7 +191,10 @@ section.search select{
 }
 .product .product-body .product__price::before{content: '$ ';}
 .product .product-body .product__price::after{content: ' clp ';}
-
+.product button{
+    font-size: 24px;
+    padding: 5px 30px;
+}
 .button{
     padding: 5px 10px;
     border: 1px solid #000;
