--- a/assets/css/carshop.css
+++ b/assets/css/carshop.css
@@ -32,13 +32,14 @@
 }
 .carshop .carshop__products{
     width: 100%;
-    height: calc(100vh - 150px);
+    height: calc(100vh - 180px);
     list-style: none;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     overflow-y: auto;
+    margin-bottom: 10px;
 }
 
 .carshop .carshop__products li {
@@ -57,10 +58,15 @@
     -o-border-radius: 10px;
     border-radius: 10px;
 }
+.carshop .carshop-total{
+    font-weight: 600;
+    text-align: end;
+    margin: 0 30px 0 0;
+}
 .carshop__footer{
     width: 100%;
     height: 100px;
-    position: relative;
+    position: absolute;
     bottom: 0;
     display: flex;
     justify-content: center;
